# nodura-main-website

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  Trunk.toml  book.toml
.github/scripts/: structure.sh
.github/workflows/: book.yml  pr_check.yml
back-end/: Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
front-end/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js
front-end/src/: main.rs
front-end/src/components/: hahaha.rs  lib.rs  mod.rs
front-end/styles/: main.css
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: mod.rs
metrics/: Cargo.toml
