[workspace]
members = ["back-end", "front-end"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

# Local dependencies
front-end = { path = "front-end" }
back-end = { path = "back-end" }
