[workspace]
members = ["backend", "frontend"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
yew = { version = "0.21.0", features = ["ssr"] }
yew-router = "0.18.0"
actix = "0.13.5"
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
gloo = "0.11.0"

# Local dependencies
frontend = { path = "frontend" }
backend = { path = "backend" }
