[workspace]
members = ["backend", "frontend", "metrics"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
yew = { version = "0.21.0", features = ["csr", "ssr"] }
yew-router = "0.18.0"
actix = "0.13.5"
actix-web = "4.9.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
wasm-bindgen = "0.2.93"
tracing-wasm = "0.2.1"
tracing-subscriber = "0.3.18"
actix-rt = "2.10.0"
actix-files = "0.6.6"
tracing = "0.1.40"
prometheus = "0.13.4"

# Local dependencies
frontend = { path = "frontend" }
backend = { path = "backend" }
metrics = { path = "metrics" }

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
