[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
actix.workspace = true
actix-web.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-wasm.workspace = true
tracing-subscriber.workspace = true

# Local dependencies
frontend.workspace = true
